# Computer-Vision

./: .gitignore
BLOCK 1/P1/: CMakeLists.txt  assigment1.1.cpp
BLOCK 1/P2/: CMakeLists.txt  assigment2.cpp
BLOCK 1/P4/: CMakeLists.txt  assignment4.cpp  laplacian_filter.cpp
BLOCK 1/P5/: CMakeLists.txt
BLOCK 1/P6/: CMakeLists.txt  assignment6_Color.cpp  assignment6_grayScale.cpp
BLOCK 1/P7/: CMakeLists.txt  assignment7.cpp
BLOCK 2/: CMakeLists.txt  p8.cpp
BLOCK 2/P8/: CMakeLists.txt  augmented_reality.cpp  p2.cpp
BLOCK 3/00.backg_moodle_v01/: CMakeLists.txt  seglib.cpp  seglib.hpp  vsegbase.cpp
BLOCK 3/01.codebasetraffic/: CMakeLists.txt  common_code.cpp  common_code.hpp  test_image.cpp  train_val.cpp
BLOCK 3/03.color_segmentation/: CMakeLists.txt  FSIV_color_segmentation.ipynb  color_segmentation.cpp
BLOCK 3/backg_moodle_v01/: seglib.cpp  seglib.hpp  vsegbase.cpp
BLOCK 3/machine learning/SVM/: CMakeLists.txt  svm.cpp  svm2.cpp
P1/: assigment1.1.cpp  assigment1.cpp
P3/: CMakeLists.txt  box_filter.cpp
P4/: CMakeLists.txt  assignment4.cpp  funciona.cpp
P5/: assignment4.cpp  assignment5.cpp
P6/: assignment6_Color.cpp  assignment6_grayScale.cpp
P7/: assignment7.cpp
P8/: CMDLineParser.h  CMakeLists.txt  augmented_reality.cpp
